<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HASH</string>
    <string name="app_title">HASH</string>
    <string name="welcome_back">Welcome Back, Jayson</string>
    <string name="subtitle">Log in to continue using HASH</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your Password</string>
    <string name="remember_me">Remember Me.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="no_account">Don\'t have an account? </string>
    <string name="sign_up">Sign Up</string>

    <string name="cd_logo">HASH logo</string>
    <string name="cd_show_password">Show password</string>
    <string name="cd_facebook">Continue with Facebook</string>
    <string name="cd_google">Continue with Google</string>

    <string name="super_button">Super Button</string>
    <string name="second_title">Welcome to the Second Activity</string>
    <string name="go_back">Go Back</string>
</resources>